<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:gravity="top"
    android:orientation="vertical">
    <LinearLayout
      android:id="@+id/operationButtonContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <Button
        android:id="@+id/exitButton"
        style="@style/exitButtonStyle"
        android:layout_marginStart="8dp"
        android:layout_gravity="start"
        android:text="@string/exitButton"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:backgroundTint="@null" />
      <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
      <Button
        android:id="@+id/storeButton"
        style="@style/storeButtonStyle"
        android:layout_marginEnd="8dp"
        android:layout_gravity="end"
        android:text="@string/storeButton"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:backgroundTint="@null" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/inputHint"
      app:hintEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/titleInput"
        style="@style/CustomInputTextLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="30sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
          android:id="@+id/planRadioButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_marginStart="64dp"
          android:checked="true"
          android:text="@string/planRadioButton"
          android:textSize="20sp" />
        <RadioButton
          android:id="@+id/taskRadioButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:checked="false"
          android:text="@string/taskRadioButton"
          android:textSize="20sp" />
        <RadioButton
          android:id="@+id/recordRadioButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_marginEnd="48dp"
          android:text="@string/resultRadioButton"
          android:textSize="20sp" />
      </RadioGroup>
    </LinearLayout>
    <LinearLayout
      android:id="@+id/categoryContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="8dp"
      android:gravity="center"
      android:orientation="horizontal">
      <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginStart="64dp"
        android:text="@string/category"
        android:textSize="20sp" />
      <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="16dp" />
    </LinearLayout>
    <View
      style="@style/horizontalBorder"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp" />
    <Switch
      android:id="@+id/allDaySwitch"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:padding="16dp"
      android:text="@string/allDay"
      android:textSize="20sp" />
    <LinearLayout
      android:id="@+id/startTimeContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginEnd="16dp"
      android:orientation="horizontal">
      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editStartDate"
          style="@style/CustomInputTextLayoutStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:enabled="true"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:inputType="none"
          android:text="@string/daySample"
          android:textSize="20sp" />
      </com.google.android.material.textfield.TextInputLayout>
      <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/startTimeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editStartTime"
          style="@style/CustomInputTextLayoutStyle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:enabled="true"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:inputType="none"
          android:text="@string/daySample"
          android:textSize="20sp" />
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
      android:id="@+id/endTimeContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="48dp"
      android:layout_marginEnd="16dp"
      android:orientation="horizontal">
      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editEndDate"
          style="@style/CustomInputTextLayoutStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:enabled="true"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:inputType="none"
          android:text="@string/daySample"
          android:textSize="20sp" />
      </com.google.android.material.textfield.TextInputLayout>
      <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />
      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/endTimeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editEndTime"
          style="@style/CustomInputTextLayoutStyle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="true"
          android:enabled="true"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:inputType="none"
          android:text="@string/daySample"
          android:textSize="20sp" />
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <View
      style="@style/horizontalBorder"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp" />
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:orientation="horizontal">
      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <View
          style="@style/lineForDetails"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="8dp"></View>
        <View
          style="@style/lineForDetails"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="8dp"></View>
        <View
          style="@style/lineForDetails"
          android:layout_marginTop="2dp"
          android:layout_marginBottom="2dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="16dp"></View>

      </LinearLayout>
      <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:hint="details">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/detailsInput"
          style="@style/CustomInputTextLayoutStyle"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textMultiLine"
          android:lines="1"
          android:maxLines="5"
          android:scrollbars="vertical"
          android:textSize="16sp" />
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
  </LinearLayout>
</FrameLayout>